# strawberry-django-aggregates

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
docs/: MIGRATING.md  SPEC.md  TERMINOLOGY.md
strawberry_django_aggregates/: __init__.py  builder.py  compiler.py  errors.py  granularity.py  operators.py  ordering.py  pagination.py  relations.py  types.py
tests/: apps.py  conftest.py  models.py  test_aggregate_correctness.py  test_bool_aliases.py  test_bucket_range.py  test_builder_integration.py  test_comodel_ordering.py  test_cursor_pagination.py  test_determinism.py  test_groupby_timezones.py  test_having_aliases.py  test_no_relation_traversal.py  test_order_on_aggregates.py  test_postgres_only_ops.py  test_relation_aggregate.py  test_streaming.py  test_week_start.py
